<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:background="@color/yellowAppBar"
        android:layout_width="match_parent"
        android:layout_height="90dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                >
                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/shopping_cart_48px" />
                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/shopping_cart_48px" />
                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/shopping_cart_48px" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_adress"
                    android:layout_marginTop="5dp"
                    android:textSize="15dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/secondaryTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subTitleStyle"
                android:text="@string/secondary_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/primaryTitleTV"
                style="@style/primaryTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/primary_title"
                />
            <TextView
                android:id="@+id/validateSellerIdentity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verified_identity"
                android:textSize="12dp"
                />
            <!-- Media -->
            <ImageView
                android:id="@+id/itemImages"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="194dp"
                app:srcCompat="@drawable/menu_48px"
                android:contentDescription="@string/content_description_media"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/detailPriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_price"
            style="@style/priceDetail"
            android:textAppearance="?attr/textAppearanceHeadline6"
            />


        </LinearLayout>
        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/askBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button.blue_app"
                android:text="@string/ask" />

            <Button
                android:id="@+id/whatsappBtn"
                style="@style/Button.blue_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_app"
                android:text="@string/favAdd"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_app"
                android:text="@string/favAdd"
                />
        </LinearLayout>

    </LinearLayout>





</androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>